<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kr.ac.korea.intelligentgallery.act.FolderCategoryAct">


    <item
        android:id="@+id/action_slide_show"
        android:icon="@drawable/ic_menu_slide_showing"
        android:orderInCategory="100"
        android:title="@string/action_slide_showing"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_mode"
        android:icon="@drawable/ic_menu_select_mode"
        android:orderInCategory="100"
        android:title="@string/action_select_mode"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_arranging_floder_category"
        android:orderInCategory="100"
        android:title="@string/action_arranging"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/action_arranging_orderby_abc"
                android:title="@string/action_arranging_orderby_abc" />
            <item
                android:id="@+id/action_arranging_orderby_date_taken"
                android:title="@string/action_arranging_orderby_date_taken" />
            <item
                android:id="@+id/action_arranging_orderby_date_added"
                android:title="@string/action_arranging_orderby_date_added" />
            <item
                android:id="@+id/action_arranging_orderby_size"
                android:title="@string/action_arranging_orderby_size" />
            <item
                android:id="@+id/action_arranging_orderby_data"
                android:title="@string/action_arranging_orderby_data" />
        </menu>
    </item>
    <item
        android:id="@+id/action_concealing"
        android:orderInCategory="100"
        android:title="@string/action_concealing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_renaming"
        android:orderInCategory="100"
        android:title="@string/action_renaming"
        app:showAsAction="never" />
</menu>
